--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="stylesheet" type="text/css" href="./src/style.css">
     <title>Decodificador</title>
 </head>
 <body>
     <main class="main container">
         <header class="cabecalho">
-          <img src="./img/logo-alura.png" alt="logo alura">
+          <img src="./src/img/logo-alura.png" alt="logo alura">
           <h1>Mensagens Codificadas</h1>
         </header>
         <div class="container-input">
@@ -24,7 +24,7 @@
 
 
         <div id="output">
-           <img src="./img/pinguim.png" alt="pinguim" height="330px" width="300px">
+           <img src="./src/img/pinguim.png" alt="pinguim" height="330px" width="300px">
            <h2>Sua mensagem aparecerá aqui!</h2>
            <span>Digite um texto que deseja criptografar ou descriptografar.</span>
         </div>
@@ -44,6 +44,6 @@
         <p>Desenvolvido por Erica Lima e Silva 💖</p>
     </footer>
 
-    <script src="./script.js"></script>
+    <script src="./src/script.js"></script>
 </body>
 </html>
